--- a/DjangoTest/main/templates/main/layout.html
+++ b/DjangoTest/main/templates/main/layout.html
@@ -23,7 +23,7 @@
         <a href="/"><li>&#127794 Стартовая</li></a>
         <a href="/about"><li>&#127760 Эбаут</li></a>
         <a href="/admin"><li>&#127931 Админка</li></a>
-        <a href=""><li>&#10060 Ничо пока</li></a>
+        <a href=""><li>&#10761 Ничо пока тут нет</li></a>
     </ul>
     
 </aside>
